<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profileFragmentTitle"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:hint="@string/firstName"
                    android:paddingTop="5dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtFirstName"
                    android:layout_marginTop="5dip"
                    android:ems="10"
                    android:hint="@string/lastName"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/nationality"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <Spinner
                    android:id="@+id/listNationality"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:tooltipText="@string/issueCategorySelect" />

                <RelativeLayout
                    android:id="@+id/layoutGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtNationality">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingLeft="5dp"
                        android:text="@string/gender"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                    <RadioGroup
                        android:id="@+id/txtGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"

                        android:layout_marginLeft="70dp"
                        android:layout_marginStart="50dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorBack"
                            android:checked="true"
                            android:text="@string/genderMale" />

                        <RadioButton
                            android:id="@+id/rdFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorBack"
                            android:checked="false"
                            android:text="@string/genderFemale" />
                    </RadioGroup>
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/yearOfBirth"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <Spinner
                    android:id="@+id/listYearOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:prompt="@string/yearOfBirthSelect"
                    android:tooltipText="@string/yearOfBirthSelect" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNationalId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nid" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtNationalId"
                android:text="@string/btn_submit" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
