<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/complaintFragmentTitle"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/issueCategory"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/listIssueCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:tooltipText="@string/issueCategorySelect"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/issue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/listIssue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:tooltipText="@string/issueCategorySelect"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/border"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/listBorders"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:prompt="@string/issueCategorySelect"
                android:tooltipText="@string/issueCategorySelect"></Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtBorder"
                    android:ems="10"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:maxLines="10" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtComments"
                android:text="@string/btn_submit" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

